--- a/documentation/latex/chapter-linguistics.tex
+++ b/documentation/latex/chapter-linguistics.tex
@@ -5,6 +5,13 @@ One of the main parts of Reprotool project is an automatic text analysis. This p
 \subsection{Introduction}
 Process of linguistics analysis gets natural language sentences as an input and returns analyzed usecases as is shown at figure \ref{fig:LinguisticsAnalyseSmall}. Whole process is divided into two parts: process of parsing and core analysis. Parsing contains main linguistics operations which are tokenization, tagging, parsing and lemmatization. Core work of parsing process is done by popular external linguistic analysis tools described in section \ref{sec:externaltools}. Core analysis converts parsed sentence trees with annotations into our usecases model. This process is described in more detail in section \ref{sec:analysis}. % TODO \ref{sec:usecasemodel}
 
+\begin{itemize}
+\item {\bf Text preparation} Cleaning up input text and tokenization
+\item {\bf Dependency trees} POS tagging and parsing
+\item {\bf Constituents} determining important text ranges
+\item {\bf Action type} final output result of analysis
+\end{itemize}
+
 Each implementation of any analyse brings problem of measuring success. We have put together a dataset of nearly tree hundred of sentences. These sentences contain the most common use cases operations. All these sentences were manually annotated and analyzed. In section \ref{sec:benchmark} is described our benchmark solution with actual results.
 
 \begin{figure}[ht]
@@ -14,7 +21,7 @@ Each implementation of any analyse brings problem of measuring success. We have 
   \label{fig:LinguisticsAnalyseSmall}
 \end{figure}
 
-In next pages is described work of various linguistics tolls.
+In next pages is described work of various linguistics tools.
 
 \subsection{External tools}
 \label{sec:externaltools}
@@ -59,7 +66,7 @@ Linguistics analysis covers multiple different actions executed by various tools
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=300pt]{images/LinguisticsAnalyse}
+  \includegraphics[width=400pt]{images/LinguisticsAnalyse}
   \caption{Process of sentence analysis}
   \label{fig:LinguisticsAnalyse}
 \end{figure}
@@ -175,13 +182,13 @@ When we have all constituents, analysis cant continue with determining proper ac
 Types of actions come from our usecase model, which is restricted due to exporting purpose. Overall small action set allows various export options described in previous chapters. 
 
 \subsubsection{Include usecase action}
-Sentence contains one of the set of defined verbs. These verbs are: "continue", "repeat", "resume" and "retry".  This verb must be main verb of the sentence. It also have to contain reference to usecase and label of one existing usecase in current project.
+Sentence contains one of the set of defined verbs. These verbs are: "continue", "repeat", "resume", "retry" and "include".  This verb must be main verb of the sentence. It also have to contain reference to usecase and label of one existing usecase in current project.
 
 \subsubsection{Goto action}
 Sentence contains one of the set of defined verb, same like in Include usecase action. This verb must be main verb of the sentence a must be found target. Target must be existing usecasestep in current usecase. 
 
 \subsubsection{Abort action}
-Set of abort verbs contains "abort", "terminate", "end".  This verb must be main verb of the sentence.
+Set of abort verbs contains "abort", "terminate", "end", "exit" and "finish".  This verb must be main verb of the sentence.
 
 \subsubsection{From system action}
 System is a subject of the sentence and we have indirect object (not system).
