user-doc chapter about model verification finished.

--- a/documentation/latex-user/chapter-import.tex
+++ b/documentation/latex-user/chapter-import.tex
@@ -1,4 +1,4 @@
-\section{Import textual use-case specifications into the \emph{Reprotool} project}
+\section{Importing textual use-case specifications into the \emph{Reprotool} project}
 
 In this section we are going to explore the feature of the \emph{Reprotool IDE} that enables you to type the use-cases in a text
 editor and later import them into a \emph{Reprotool} project. Firstly, we will show you an example of a textual specification
