--- a/documentation/latex-user/chapter-newProj.tex
+++ b/documentation/latex-user/chapter-newProj.tex
@@ -1,6 +1,9 @@
-\section{Create a new \emph{Reprotool} project}
+\section{Manually creating a new \emph{Reprotool} project}
 
 In this section we will walk through the process of creating a new simple \emph{Reprotool} project named \emph{PostOffice}.
+Here, we are going to create the project manually. You will not need the project that we are creating here in the later parts
+of this documentation. The chapter following this chapter deals with importing use-cases into \emph{Reprotool} project.
+All exercises in this documentation will be based on the project from the next chapter, not this one.
 
 \subsection{\emph{PostOffice} project description}
 We will create a simple \emph{PostOffice} project that describes how a letter is written and then taken to the post office.
@@ -165,8 +168,6 @@ the \emph{SentenceAnalysis view} visible.
 Now we will define the \emph{Abort} action for the only use-case step of the first step extension scenario. Click on the use-case step
 with label \emph{1a1} and select \emph{Abort} as \emph{Action Type} in the \emph{Sentence Analysis View}. You can view this situation
 in the next picture:
-
-\newpage
 
 \begin{figure}[ht]
   \centering
