added chapter about textual editor

--- a/documentation/latex-user/reprotool.tex
+++ b/documentation/latex-user/reprotool.tex
@@ -170,6 +170,7 @@
 
 \include{chapter-introduction}
 \include{chapter-newProj}
+\include{chapter-textual-editor}
 \include{chapter-import}
 \include{chapter-quick-tutorial}
 \include{chapter-model-checking}
