user doc - added section about keyboard shortcuts

--- a/documentation/latex-user/chapter-newProj.tex
+++ b/documentation/latex-user/chapter-newProj.tex
@@ -261,3 +261,17 @@ situation is depicted in this figure:
   \caption{\emph{precede} annotation specified}
   \label{fig:reprotoolPrecede}
 \end{figure}
+
+\subsection{Keyboard shortcuts available in Project and Use case editor}
+
+To speed up manipulation with objects in \emph{Reprotool} user can use these keyboard shortcuts:
+
+\verb|Delete| removes selected \emph{Conceptual object}, \emph{Actor} or \emph{Use case} in \emph{Project editor}.
+In \emph{Use case editor} it removes removes selected \emph{Use case step}, \emph{Annotation}, \emph{Extension} or \emph{Variation}.  
+
+\verb|Ctrl + Enter| in \emph{Use case editor} adds new \emph{Use case step} after currently selected one.
+
+\verb|Ctrl + 1| and \verb|Ctrl + 2| in \emph{Use case editor} adds new \emph{Extension} or \emph{Variation} of the selected use case step.
+
+\verb|Ctrl + 4| in \emph{Use case editor} adds new \emph{Annotation} of the selected use case step.
+
