--- a/documentation/latex-user/chapter-newProj.tex
+++ b/documentation/latex-user/chapter-newProj.tex
@@ -2,8 +2,8 @@
 
 In this section we will walk through the process of creating a new simple \emph{Reprotool} project named \emph{PostOffice}.
 Here, we are going to create the project manually. You will not need the project that we are creating here in the later parts
-of this documentation. The chapter following this chapter deals with importing use-cases into \emph{Reprotool} projects.
-All exercises in this documentation will be based on the project from the next chapter or on the \emph{Reprotool} example projects,
+of this documentation. In the next chapters we will deal with importing use-cases into \emph{Reprotool} projects.
+All exercises in this documentation will be based on the project from the following chapters or on the \emph{Reprotool} example projects,
 not on the \emph{PostOffice} project from this chapter.
 
 \subsection{\emph{PostOffice} project description}
